# fisa06-stock-app

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  배포.txt  상장법인목록.xls
pages/: 2-page2.py
