[project]
name = "03-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "finance-datareader>=0.9.101",
    "html5lib>=1.1",
    "koreanize-matplotlib>=0.1.1",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "streamlit>=1.53.0",
]
